# minigrep-in-10-langs

./: .gitignore  LICENSE  README.md  either-or.txt  flake.nix
cpp/: flake.nix  minigrep.cpp
elixir/: flake.nix  minigrep.exs
fennel/: fennal.lua  flake.nix  minigrep.fnl
gleam/: flake.nix  gleam.toml  manifest.toml
gleam/src/: minigrep.gleam
go/: flake.nix  go.mod  minigrep.go
haskell/: flake.nix  minigrep.hs
java/: flake.nix  minigrep.java
lua/: flake.nix
minigrep-hs/: flake.nix  minigrep-hs.cabal
minigrep-hs/app/: Main.hs
minigrep-lua/: minigrep.lua
nim/: flake.nix  minigrep.nim
ocaml/: dune-project  flake.nix
ocaml/lib/: dune
rust/: flake.nix  minigrep.rs
scheme/: flake.nix  minigrep.scm
typescript/: flake.nix  minigrep.ts  package-lock.json  package.json
